<resources>
    <string name="app_name">HiFive</string>
    <string name="start_project_button_label">Start a project</string>
    <string name="find_project_button_label">Find a project</string>
    <string name="cancel_start_project_button_label">Cancel</string>
    <string name="confirm_start_project_button_label">Continue</string>
    <string name="project_title_label">Title</string>
    <string name="project_title_hint">e.g. The Burrito Game</string>
    <string name="project_description_label">Description</string>
    <string name="project_description_hint">e.g. We take turns wrapping one another up in giant tortillas. The last one to spill out wins.</string>
    <string name="project_interest_label">Relevant interests (max. 5)</string>
    <string name="project_interest_hint">e.g. Food games</string>
    <string name="profile_button_label">Profile</string>
    <string name="add_interest_button_label">Enter</string>
    <string name="add_interest_field_hint">Type an interest here.</string>
    <string name="remove_interest_button_label">Remove</string>
    <string name="default_interest_text">--</string>
    <string name="back_button_label">Back</string>
    <string name="select_project_button_label">More info</string>
    <string name="start_navigating_button">Navigate</string>
    <string name="join_button">Join</string>
    <string name="exit_project_button_label">Leave</string>
    <string name="finish_project_button_label">Done</string>
    <string name="leave_finished_project_button_label">Finish</string>
    <string name="finalize_project_button_label">Finalize</string>
    <string name="begin_project_button_label">Begin</string>

    <string name="go_to_participant_list_button_label">Participants</string>


    <string name="project_in_progress_screen_title">Project in progress</string>
    <string name="participant_0">King Harkinian</string>
    <string name="participant_1">Ganon</string>
    <string name="participant_2">Tom Servo</string>
    <string name="participant_3">Freddi Fish</string>

    <string name="waiting_for_participants_screen_title">Waiting for Participants</string>
    <string name="participant_0_status">Joined</string>
    <string name="participant_1_status">Joined</string>
    <string name="participant_2_status">500m</string>
    <string name="participant_3_status">2km</string>

    <string name="participant_0_ratings">21 ratings</string>
    <string name="participant_1_ratings">2 ratings</string>
    <string name="participant_2_ratings">800 ratings</string>
    <string name="participant_3_ratings">12 ratings</string>

    <string name="join_project_screen_title">Join this project?</string>

    <string name="finish_waiting_button_label">Prototype: I waited</string>
    <string name="finish_navigating_button_label">Prototype: I navigated</string>

    <string name="waiting_for_start_screen_title">Waiting for the project to begin</string>
    <string name="waiting_for_finish_screen_title">Waiting for the everybody else to finish</string>

    <string name="project_complete_screen_title">Project complete! Rate the others.</string>

    <string name="set_location_screen_title">Project gathering point set to your current location.</string>

    <string name="navigate_screen_title">Navigating</string>

    <string name="participant_list_screen_title">Current participants:</string>
    <string name="exit_participant_list_button_label">Back to description</string>

    <string name="confirm_exit_title">Are you sure you want to quit?</string>

    <string name="profile_title">Your profile</string>
<<<<<<< HEAD
    <string name="title_activity_maps">Map</string>
=======

    <string name="host_name">King Harkinian</string>
    <string name="host_num_ratings">32 ratings</string>

    <string name="user_name">Nigel Thornberry</string>

>>>>>>> origin/master


</resources>
