<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_wait_for_participants"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="hifive.hifive.WaitForParticipants">

    <Button
        android:text="@string/cancel_start_project_button_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:id="@+id/cancel_button"
        android:onClick="goToMain"/>

    <Button
        android:text="@string/begin_project_button_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/start_project_button"
        android:onClick="goToProjectInProgress"/>

    <TextView
        android:text="@string/waiting_for_participants_screen_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/title" />

    <RatingBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/participant_3_rating"
        android:layout_below="@+id/participant_3_name"
        android:layout_alignParentStart="true"
        android:rating="4"
        android:clickable="false"
        android:isIndicator="true"/>

    <TextView
        android:text="@string/participant_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/participant_2_name"
        android:layout_below="@+id/participant_1_rating"
        android:layout_alignParentStart="true" />

    <RatingBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/participant_2_rating"
        android:layout_below="@+id/participant_2_name"
        android:layout_alignParentStart="true"
        android:rating="5"
        android:clickable="false"
        android:isIndicator="true"/>

    <RatingBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/participant_1_rating"
        android:layout_below="@+id/participant_1_name"
        android:layout_alignParentStart="true"
        android:rating="1"
        android:clickable="false"
        android:isIndicator="true"/>

    <TextView
        android:text="@string/participant_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/participant_1_name"
        android:layout_below="@+id/participant_0_rating"
        android:layout_alignParentStart="true" />

    <RatingBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/participant_0_rating"
        android:layout_below="@+id/participant_0_name"
        android:layout_alignParentStart="true"
        android:rating="3"
        android:clickable="false"
        android:isIndicator="true"/>

    <TextView
        android:text="@string/participant_0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/participant_0_name"
        android:layout_below="@+id/title"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/participant_2_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/participant_1_rating"
        android:layout_alignStart="@+id/participant_1_status"
        android:id="@+id/participant_2_status" />

    <TextView
        android:text="@string/participant_3_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/participant_3_status"
        android:layout_below="@+id/participant_2_rating"
        android:layout_alignStart="@+id/participant_2_status" />

    <TextView
        android:text="@string/participant_1_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/participant_1_status"
        android:layout_below="@+id/participant_0_rating"
        android:layout_alignEnd="@+id/participant_1_rating" />

    <TextView
        android:text="@string/participant_0_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/participant_0_status"
        android:layout_below="@+id/title"
        android:layout_alignEnd="@+id/participant_0_rating" />

    <TextView
        android:text="@string/participant_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/participant_3_name"
        android:layout_below="@+id/participant_2_rating"
        android:layout_alignParentStart="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@mipmap/harkinian"
        android:layout_below="@+id/title"
        android:id="@+id/participant_0_picture"
        android:layout_above="@+id/participant_1_status"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/participant_0_rating" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@mipmap/ganon"
        android:layout_below="@+id/participant_0_rating"
        android:id="@+id/participant_1_picture"
        android:layout_above="@+id/participant_2_status"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/participant_1_rating" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@mipmap/servo"
        android:layout_below="@+id/participant_1_picture"
        android:id="@+id/participant_2_picture"
        android:layout_above="@+id/participant_3_status"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/participant_2_rating" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@mipmap/freddi"
        android:layout_below="@+id/participant_2_rating"
        android:id="@+id/participant_3_picture"
        android:layout_alignBottom="@+id/participant_3_rating"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/title" />
</RelativeLayout>
