<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_project_complete"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="hifive.hifive.ProjectComplete">

    <Button
        android:text="@string/leave_finished_project_button_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/return_button"
        android:onClick="goToMain"/>

    <TextView
        android:text="@string/participant_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/participant_3_name_pc"
        android:layout_alignTop="@+id/imageView4"
        android:layout_toEndOf="@+id/imageView4"
        android:textAppearance="@android:style/TextAppearance.Material.Large" />

    <RatingBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/participant_3_rating_pc"
        android:layout_below="@+id/participant_3_name_pc"
        android:layout_toEndOf="@+id/imageView4" />

    <TextView
        android:text="@string/participant_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/participant_2_name_pc"
        android:textAppearance="@android:style/TextAppearance.Material.Large"
        android:layout_alignTop="@+id/imageView3"
        android:layout_alignEnd="@+id/participant_3_name_pc" />

    <RatingBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/participant_2_rating_pc"
        android:layout_below="@+id/participant_2_name_pc"
        android:layout_toEndOf="@+id/imageView3" />

    <TextView
        android:text="@string/participant_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/participant_1_name_pc"
        android:layout_alignTop="@+id/imageView2"
        android:layout_alignStart="@+id/participant_1_rating_pc"
        android:textAppearance="@android:style/TextAppearance.Material.Large" />

    <RatingBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/participant_1_rating_pc"
        android:layout_below="@+id/participant_1_name_pc"
        android:layout_alignStart="@+id/participant_2_name_pc" />

    <TextView
        android:text="@string/participant_0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/paricipant_0_name_pc"
        android:layout_alignTop="@+id/imageView"
        android:layout_toEndOf="@+id/imageView"
        android:textAppearance="@android:style/TextAppearance.Material.Large" />

    <RatingBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/participant_0_rating_pc"
        android:layout_below="@+id/paricipant_0_name_pc"
        android:layout_toEndOf="@+id/imageView" />

    <TextView
        android:text="@string/project_complete_screen_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/title_pc"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textAppearance="@android:style/TextAppearance.Material.Large" />

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:srcCompat="@mipmap/harkinian"
        android:id="@+id/imageView"
        android:layout_below="@+id/title_pc"
        android:layout_alignParentStart="true" />

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:srcCompat="@mipmap/ganon"
        android:id="@+id/imageView2"
        android:layout_below="@+id/imageView"
        android:layout_alignParentStart="true" />

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:srcCompat="@mipmap/servo"
        android:id="@+id/imageView3"
        android:layout_below="@+id/imageView2"
        android:layout_alignParentStart="true" />

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:srcCompat="@mipmap/freddi"
        android:id="@+id/imageView4"
        android:layout_below="@+id/imageView3"
        android:layout_alignParentStart="true" />

</RelativeLayout>
