<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_wait_for_finish"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="hifive.hifive.WaitForFinish">

    <Button
        android:text="@string/finish_waiting_button_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/finish_button_wff"
        android:onClick="goToProjectComplete"/>

    <Button
        android:text="@string/exit_project_button_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/finish_button_wff"
        android:layout_alignParentStart="true"
        android:id="@+id/leave_button_wff"
        android:onClick="goToMain"/>

    <TextView
        android:text="@string/waiting_for_finish_screen_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/title_wff"
        android:textAppearance="@android:style/TextAppearance.Material.Large" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@mipmap/loading"
        android:layout_below="@+id/title_wff"
        android:layout_alignParentEnd="true"
        android:id="@+id/loading_wff"
        android:layout_above="@+id/finish_button_wff"
        android:layout_alignParentStart="true" />
</RelativeLayout>
